--- a/app/src/main/res/layout/star.xml
+++ b/app/src/main/res/layout/star.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/star_image"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:contentDescription="@string/app_name"
-    android:onClick="RotateY">
-</ImageView>
+    android:contentDescription="@string/app_name" />
